load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/JonasScharpf/godap",
)

go_binary(
    name = "ldap-mock",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/JonasScharpf/godap",
    visibility = ["//visibility:private"],
    deps = [
        "//godap:go_default_library",
    ],
)
